# system16_sprite_viewer

./: .gitignore  readme.md
cmake/: CMakeLists.txt  win64.cmake
docs/: readme.txt
res/: afterburner2.xml  golden_axe.xml  goldenaxe.xml  outrun.xml  powerdrift_b.xml
res/config/: afterburner2.xml  altbeast.xml  goldenaxe.xml  hangon.xml  logicpr2.xml  logicpro.xml  outrun.xml  powerdrift_b.xml  powerdrift_y.xml  shangon.xml  shangonle.xml  sharrier.xml  shinobi.xml  wb3.xml
res/config/palettes/: aburner2.pal  altbeast.pal  goldnaxe.pal  hangon.pal  logicpr2.pal  logicpro.pal  pdrift_y.pal  shangon.pal  sharrier.pal  shinobi.pal  wb3.pal
res/palettes/: outrun.pal  pdrift_b.pal
src/: config.cpp  config.hpp  globals.hpp  hwsprites.cpp  hwsprites.hpp  input.cpp  input.hpp  main.cpp  palette.hpp  romloader.cpp  romloader.hpp  roms.cpp  roms.hpp  stdint.hpp  video.cpp  video.hpp
